--- a/exercises/powershell/module02/docker-compose.yml
+++ b/exercises/powershell/module02/docker-compose.yml
@@ -14,7 +14,8 @@ services:
   junit-converter:
     image: python:3.10
     depends_on:
-      - pwsh-tester
+      pwsh-tester:
+        condition: service_completed_successfully
     volumes:
       - ./test-results:/app/test-results
     working_dir: /app/test-results
